<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".ChangePasswordDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_pass"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/old_password_edt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/old_pass_placeholder"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_pass"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/new_password_edt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_pass_placeholder"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_pass"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/repeat_password_edt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/repeat_pass_placeholder"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password_desc"
        android:layout_marginVertical="8dp" />

    <Button
        android:id="@+id/btn_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>